# AI-tutor

./: .env.example  .gitignore  Makefile  README.md  coding_prompt.md
.github/workflows/: ci.yml
llm-tutor/backend/: pyproject.toml
llm-tutor/backend/alembic/: env.py
llm-tutor/backend/app/: main.py
llm-tutor/backend/app/api/: router.py
llm-tutor/backend/app/api/routes/: admin.py  auth.py  catalog.py  chat.py  documents.py  progress.py  rag.py  tools.py
llm-tutor/backend/app/core/: config.py  deps.py  security.py
llm-tutor/backend/app/db/: session.py
llm-tutor/backend/app/db/models/: __init__.py  catalog.py  chat.py  docs.py  eval.py  progress.py  quiz.py  users.py
llm-tutor/backend/app/services/: chunking.py  embeddings.py  ingest.py  rag.py
llm-tutor/backend/app/services/tutor/: orchestrator.py  prompts.py
llm-tutor/backend/app/utils/: observability.py  paths.py  rate_limit.py
llm-tutor/backend/app/workers/: celery_app.py  tasks.py
llm-tutor/backend/tests/: test_auth.py  test_chunking.py
llm-tutor/docs/: API.md  ARCHITECTURE.md  RAG.md  SECURITY.md  USER_GUIDE.md
llm-tutor/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
llm-tutor/frontend/src/: main.tsx  styles.css
llm-tutor/frontend/src/components/: CitationsPanel.tsx  FileDrop.tsx
llm-tutor/frontend/src/lib/: api.ts
llm-tutor/infra/: docker-compose.yml
llm-tutor/infra/docker/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
llm-tutor/infra/k8s/: README.md
llm-tutor/scripts/: dev.sh  seed.py
(+11 files in other folders)
